src/content/styles/modules/_geosearch.scss
$result-item-height: rem(4.0);

$result-item-height-touch: rem(4.8);

@mixin geolegappbar {
    .rv-geosearch-bar {
        @extend %appbar;

        height: $toolbar-height;

        flex-shrink: 0;

        // style autocomplete control
        md-autocomplete {
            // hide the default progress bar on the control itself
            md-progress-linear {
                display: none;
            }

            // the default height is 40px; we don't need that
            height: auto;

            md-autocomplete-wrap {
                box-shadow: none; // remove shadow since it needs to look like a regular form input field
                height: auto; // same as above

                // the clear button is not positioned correctly because we wrapped autocomplete in md-input-container to get the behaviour of a regular input field
                // hide it
                > button {
                    display: none;
                    position: absolute;
                    right: 0;
                }
            }
        }

        // offset and color search icon
        md-icon[md-svg-src="action:search"] {
            color: $primary-color;
            margin: rem(0.8);
        }
    }

    rv-geosearch {
        max-height: 100%;

        display: flex;
        pointer-events: all;

        .rv-geosearch-content {
            background-color: white;

            position: relative;
            margin-top: rem(1.0);

            display: flex;
            flex-direction: column;

            width: 100%;

            %geosearch-fixed-section {
                height: rem(4.0);
                display: flex;
                align-items: center;
                flex-shrink: 0;
            }

            .rv-geosearch-top-filters {
                @extend %geosearch-fixed-section;

                padding: rem(0.4) rem(1.2) rem(0.4) rem(1.0 + 0.8); // rem(1.0 + 4.0 + 0.6);

                md-input-container {
                    margin: 0 rem(0.4) 0 0;
                }

                .rv-geosearch-province-filter {
                    flex: 2;
                    min-width: rem(6.4);
                }

                .rv-geosearch-type-filter {
                    flex: 1;
                    margin-right: rem(1.0);
                    min-width: rem(6.4);
                }
            }

            .rv-geosearch-results {
                overflow: auto;
                padding: rem(1.0) 0;

                .rv-no-results {
                    display: block;
                    text-align: center;
                }

                .rv-results-list {
                    @extend %action-list;

                    .rv-results-item {
                        // TODO: height for touch
                        height: $result-item-height;
                        display: flex;
                        align-items: center;

                        padding: 0 18px;

                        .rv-results-item-tooltip {
                            display: flex;
                            position: absolute;
                            background-color:  $divider-color-light;
                            line-height: $result-item-height;
                            white-space: nowrap;
                            padding: 0 rem(2) 0 rem(2);
                            min-width: rem(40);
                            animation: anim 3s infinite alternate ease-in-out;
                        }

                        // Will not work in Safari because they can't have to empty
                        // If we set 'to' and change keyframe values in javascript page reload in Safari
                        @keyframes anim {
                            from { left: 0%; }
                            to { }
                        }

                        .rv-results-item-main {
                            white-space: nowrap;
                            overflow: hidden;
                            text-overflow: ellipsis;
                            margin-right: 8px;
                        }

                        .rv-results-item-city,
                        .rv-results-item-province {
                            color: $secondary-text-color;
                        }

                        .rv-results-item-type {
                            white-space: nowrap;
                            text-overflow: ellipsis;
                            overflow: hidden;
                            font-weight: bold;
                            max-width: 40%;
                        }

                        .rv-geosearch-highlight {
                            font-weight: bold;
                            color: $primary-color;
                        }

                        // TODO: abstract
                        .rv-results-item-body-button {
                            position: absolute;
                            padding: 0;
                            margin: 0;
                            top: 0; // anchor the button to its parent container
                            bottom: 0;
                            left: 0;
                            width: 100%;
                        }
                    }
                }
            }

            .rv-geosearch-bottom-filters {
                @extend %geosearch-fixed-section;

                padding: rem(0.4) rem(1.0) rem(0.4) rem(1.0 + 1.0);

                md-checkbox {
                    margin: 0;
                }
            }
        }
    }
}

